--- a/lollo-port/package.json
+++ b/lollo-port/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "emailjs": "^4.0.3",
+    "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -56,7 +57,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.0",
+    "@types/luxon": "^3.4.2",
     "prettier": "3.2.5"
   }
 }
