--- a/lollo-port/package.json
+++ b/lollo-port/package.json
@@ -1,7 +1,6 @@
 {
   "name": "lollo-port",
   "version": "0.1.0",
-  "homepage": "https://lorenzobruni-dev.netlify.app/",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -25,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.1",
+    "react-toastify": "^10.0.5",
     "source-map-loader": "^4.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
