--- a/lollo-port/package.json
+++ b/lollo-port/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "emailjs": "^4.0.3",
+    "lodash": "^4.17.21",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -57,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/luxon": "^3.4.2",
     "prettier": "3.2.5"
   }
